--- a/project.qmd
+++ b/project.qmd
@@ -35,19 +35,37 @@ The CPI dataset tracks changes in consumer prices over time, serving as an impor
 
 ## 2.1 Data Source
 
-The data source is Türkiye İstatistik Kurumu (Turkish Statistical Institute - TÜİK) database, which provides comprehensive and reliable statistical data for Turkey.
+The data source is Türkiye İstatistik Kurumu (Turkish Statistical Institute - TÜİK) database.
+
+To access the `.RData` file containing the dataset used in this analysis, please reach out to the dataset from following link. 
+
+[Reach out for the .RData file](https://github.com/emu-hacettepe-analytics/emu660-spring2024-cevateness/blob/main/dataset)
 
 
 ## 2.2 General Information About Data
 
 Sales Quantity: Total sales volume of products domestically and internationally within the reference year or preceding years.
 Enterprise Count: Number of enterprises providing information in the annual industrial product survey, including estimates for non-responding enterprises.
+
 Production Quantity: Total quantity of products manufactured within the reference year, irrespective of sales, stocking, or internal use.
+
 Production Value: Total value of products manufactured within the reference year, excluding sales, stocking, or internal use.
+
 Sales Value: Total sales value of products domestically and internationally within the reference year, including packaging costs but excluding VAT, excise duties, recycling packaging values, separately charged customer transport and delivery costs, customer discounts, payments for returned goods, and government subsidies.
+
 CPI: Annual rate of change of consumer price index numbers 
+
 Distribution of R&D expenditures in financial and non-financial corporations by types of R&D: the percentage distribution of various types of R&D activities through the years.
+
 Gross domestic expenditure on R&D by sector and source of funds: the expenditure amount of sectors from the various funds through the years.
+
+The datasets, explanatory data analyses  and remarkable findings about the Product, R&D and CPI dataset bundles are presented by TUIK. Also, the original data can be found. It can be reached out from following links:
+
+[Annual Industrial Product (PRODCOM) Statistics - 2022](https://data.tuik.gov.tr/Bulten/Index?p=Yillik-Sanayi-Urun-(PRODCOM)-Istatistikleri-2022-49370)
+
+[Research and Development Activities Survey -2022](https://data.tuik.gov.tr/Bulten/Index?p=Research-and-Development-Activities-Survey-2022-49408)
+
+[Consumer Price Index - December 2023](https://data.tuik.gov.tr/Bulten/Index?p=Tuketici-Fiyat-Endeksi-Aralik-2023-49657)
 
 
 ## 2.3 Reason of Choice
